syntax = "proto3";

option go_package = "github.com/AllenShaw19/raft_grpc/example/proto";

service KV {
  rpc Set(SetRequest) returns (SetResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetResponse {}

message GetRequest {
  string key = 1;
}
message GetResponse {
  string value = 1;
  uint64  read_index = 2;
}